--- a/.github/workflows/Tests.yml
+++ b/.github/workflows/Tests.yml
@@ -68,30 +68,21 @@ jobs:
       #   run: az vm create -g "$RESOURCE_GROUP" -n "$VM_NAME" --image "$IMAGE_NAME" --public-ip-address "$PUBLIC_IP_NAME" --subnet "$SUBNET_NAME" --vnet-name "$VNET_NAME" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu_key.pub --admin-username cvx
       
       - name: Create Master VM
-        run: az vm create -g "ubuntu-latest-1.5-344189829" -n "ubuntu-latest-1.5-344189829-vm-loc5" --image "ubuntu-latest-1.5-344189829-image" --public-ip-address "ubuntu-latest-1.5-344189829-pubip-loc5" --subnet default --vnet-name "ubuntu-latest-1.5-344189829-vnet" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu_key.pub --admin-username cvx
+        run: az vm create -g "ubuntu-latest-1.5-344189829" -n "ubuntu-latest-1.5-344189829-vm-loc6" --image "ubuntu-latest-1.5-344189829-image" --public-ip-address "ubuntu-latest-1.5-344189829-pubip-loc6" --subnet default --vnet-name "ubuntu-latest-1.5-344189829-vnet" --ssh-key-values @/home/runner/.ssh/azmanagers_rsa.pub @/home/runner/work/AzManagers.jl/AzManagers.jl/mcpu_key.pub --admin-username cvx
       
-      # - name: Run the unit tests
-      #   run: |
-      #     ipaddress=$(az network public-ip show -g "ubuntu-latest-1.5-344189829" -n "ubuntu-latest-1.5-344189829-pubip-loc4" | jq '.ipAddress' | cut -d "\"" -f 2)
-      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa.pub cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa.pub
-      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa
-      #     ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "julia -e 'using Pkg; pkg\"test AzManagers\"'"
-      #     sudo apt install mlocate
-      #     lcovpath=$(ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "locate lcov.info")
-      #     scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:$lcovpath /home/runner/lcov.info
-      #   # could use detach functionality from AzManagers here ^^^^^
-
-      # - uses: codecov/codecov-action@v1
-      #   with:
-      #     file: lcov.info
-
       - name: Run the unit tests
         run: |
-          ipaddress=$(az network public-ip show -g "ubuntu-latest-1.5-344189829" -n "ubuntu-latest-1.5-344189829-pubip-loc5" | jq '.ipAddress' | cut -d "\"" -f 2)
+          ipaddress=$(az network public-ip show -g "ubuntu-latest-1.5-344189829" -n "ubuntu-latest-1.5-344189829-pubip-loc6" | jq '.ipAddress' | cut -d "\"" -f 2)
           scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa.pub cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa.pub
           scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:/home/cvx/.ssh/azmanagers_rsa
-          lcovpath=$(ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "find -name azmanagers_rsa.pub")
-          echo "$lcovpath"
+          ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "julia -e 'using Pkg; pkg\"test AzManagers\"'"
+          lcovpath=$(ssh -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress "find -name lcov.info")
+          scp -o StrictHostKeyChecking=no -i /home/runner/.ssh/azmanagers_rsa cvx@$ipaddress:$lcovpath /home/runner/lcov.info
+        # could use detach functionality from AzManagers here ^^^^^
+
+      - uses: codecov/codecov-action@v1
+        with:
+          file: lcov.info
 
       # - name: Delete CI Resource Group
       #   run: |
